<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorDarkMenuTrans"
    android:padding="15dp">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/boxExerciseType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:errorTextAppearance="@style/ErrorAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/boxExerciseTitle"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:maxLength="30" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/boxExerciseLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:errorTextAppearance="@style/ErrorAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boxExerciseType">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/boxExerciseLength"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="@integer/exerciseTimeMaxLength" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/boxExerciseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:errorTextAppearance="@style/ErrorAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boxExerciseLength">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/boxExerciseDate"
            android:imeOptions="actionDone"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/boxExerciseLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:errorTextAppearance="@style/ErrorAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boxExerciseDate">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/boxExerciseLocation"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:maxLength="30" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/boxExerciseDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:errorTextAppearance="@style/ErrorAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boxExerciseLocation">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/boxExerciseDesc"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:maxLength="100" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnConfirmEntry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btnConfirmEntry"
        app:layout_constraintEnd_toEndOf="@+id/boxExerciseDesc"
        app:layout_constraintStart_toStartOf="@+id/boxExerciseDesc"
        app:layout_constraintTop_toBottomOf="@+id/boxExerciseDesc" />
</androidx.constraintlayout.widget.ConstraintLayout>